...
  @State private var isOrderSubmitted = false
  @State private var shouldPresentLatestOrder = false
  @State private var orderError: CartUserError?

  private enum Configuration {
    static let paymentMethod = "card"
    static let successTitle = "Заказ оформлен"
    static let successSubtitle = "Товары уже в процессе сборки, скоро привезём!"
    static let successButtonName = "Закрыть"
    static let orderErrorTitle = "Не удалось оформить заказ"
    static let alertButtonTitle = "OK"
  }

  var body: some View {
    cartContent
...
